fixes homepage overflow

--- a/css/home.css
+++ b/css/home.css
@@ -196,6 +196,10 @@
     width: 50px;
 }
 
+.stats {
+    overflow: hidden;
+}
+
 .stats .container {
     max-width: 900px;
     padding: 2rem;
